Bugfix sign up page squishing on mobile

--- a/src/features/sign-up-card/sign-up-card.module.scss
+++ b/src/features/sign-up-card/sign-up-card.module.scss
@@ -11,7 +11,7 @@
     width: 20%;
 
     @include abs.breakpoints(md) {
-      width: 40%;
+      width: 8%;
     }
 
     h1 {
